# secteller

./: .gitignore  .pylintrc  db.sqlite3  dev.py  pyproject.toml
app/: apps.py  forms.py  views.py
app/network/: domain.py
app/utils/: logger.py
config/: settings.py  urls.py
static/css/: styles.css
staticfiles/css/: styles.css
templates/: analysis.html  base.html  contact.html  report.html
