[tool.poetry]
name = "secteller"
version = "0.1.0"
description = "Web Security Analyzer"
authors = ["Weronika Sleboda <weronika_sleboda@hotmail.com>"]
packages = [
    { include = "app" },
    { include = "config" },
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
requests = "^2.32.3"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
dnspython = "^2.7.0"
python-whois = "^0.9.5"
ipwhois = "^1.3.0"
cryptography = "^44.0.2"
django-ratelimit = "^4.1.0"

[tool.poetry.dev-dependencies]
# Add dev packages here (like pytest or black)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
